[metadata]
name = synthspline
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Synthetic tubular structures (vessels, axons) for NN pretraining
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/synthspline

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.6
    torch-interpol >= 0.2
    torch-distmap >= 0.2
    cornucopia >= 0.3
    nibabel
    yaml

[options.extra_requires]
jit = jitfields
cuda = cupy
